<resources>
    <string name="app_name">gm</string>
    <string name="title_home">GMs</string>
    <string name="title_dashboard">NFTs</string>
    <string name="title_settings">Settings</string>
    <string name="home_page_heading">gm</string>
    <string name="airdrop_sol">Airdrop 1 SOL</string>
    <string name="home_page_sub_heading">There is no better time to say gm.</string>

    <string name="wallet_balance">%1$s SOL</string>
    <string name="select_wallet">Select Wallet</string>
    <string name="copy_address">Copy address</string>
    <string name="disconnect">Disconnect</string>

    <!-- dashboard strings -->
    <string name="sign_message">Sign Message</string>
    <string name="send_transaction">Send Transaction</string>
    <string name="send_versioned_transaction">Send Versioned Transaction</string>
    <string name="build_mobile_dapps">Build mobile dApps</string>
    <string name="gm">say gm.</string>
    <string name="to_refresh_gm_count">To refresh gm count</string>
    <string name="_0_gm">0 gm</string>
    <string name="congratulations_your_gm_is_special">Congratulations, your gm. is special! You did the %s gm today</string>
    <string name="mint_nft">Mint NFT</string>
    <string name="gm_count_text">You have said gm %s times today!</string>
    <string name="rewards">Rewards</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>