<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_animation"
    tools:context=".presentation.ui.home.HomeFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="start"
        android:text="@string/home_page_heading"
        android:textColor="@color/white"
        android:fontFamily="@font/custom_font"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/sub_heading"
        style="@style/TextAppearance.AppCompat.Large"
        android:fontFamily="@font/custom_font"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="start"
        android:text="@string/home_page_sub_heading"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/balance_tv"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/custom_font"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_weight="1"
            tools:text="0 SOL" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/wallet_btn"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/dark_gray"
            android:fontFamily="@font/custom_font"
            android:gravity="center"
            android:textColor="@color/white"
            app:cornerRadius="10dp"
            app:icon="@drawable/baseline_circle_24"
            app:iconTint="@color/red"
            tools:text="Select Wallet" />

        <ImageView
            android:id="@+id/copy_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:contentDescription="To copy wallet address"
            android:src="@drawable/baseline_content_copy_24"
            android:visibility="gone"
            app:tint="@color/white" />

    </LinearLayout>

    <Button
        android:id="@+id/gm_button"
        android:layout_width="135dp"
        android:layout_height="147dp"
        android:backgroundTint="@color/dark_gray"
        android:fontFamily="@font/custom_font"
        android:gravity="center"
        android:padding="16dp"
        android:layout_marginTop="50dp"
        android:text="@string/gm"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24dp"
        app:cornerRadius="1500dp"
        android:layout_gravity="center_horizontal" />

    <ProgressBar
        android:id="@+id/home_progress_bar"
        android:layout_width="135dp"
        android:layout_height="147dp"
        android:gravity="center"
        android:padding="16dp"
        android:layout_marginTop="50dp"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/gm_count_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/custom_font"
        android:gravity="center"
        android:padding="16dp"
        android:layout_marginBottom="40dp"
        android:text="@string/_0_gm"
        android:visibility="invisible"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal" />

<!--    <ImageView-->
<!--        android:id="@+id/refresh_button"-->
<!--        android:layout_width="30dp"-->
<!--        android:layout_height="30dp"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        android:layout_marginBottom="16dp"-->
<!--        android:visibility="invisible"-->
<!--        android:contentDescription="@string/to_refresh_gm_count"-->
<!--        android:src="@drawable/baseline_refresh_24" />-->


    <com.google.android.material.button.MaterialButton
        android:id="@+id/airdrop_btn"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/dark_gray"
        android:fontFamily="@font/custom_font"
        android:gravity="center"
        android:text="@string/airdrop_sol"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        app:icon="@drawable/baseline_water_drop_24"
        app:iconTint="@color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/build_dapps_btn"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@drawable/text_background"
        android:fontFamily="@font/custom_font"
        android:gravity="center"
        android:text="@string/build_mobile_dapps"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        app:icon="@drawable/baseline_twitter_24"
        app:iconTint="#00aced" />


</LinearLayout>